--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://imcharly2024.github.io.git/imcharly2024.github.io.",
+  "homepage": "https://nahuelmatiasfortuna2024.000webhostapp.com/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
